# AI-Video-Clipper-LoRA

./: .dockerignore  .gitignore  1. README.md  2. Run.bat  2. install.bat  Dockerfile  Install.bat  LICENSE  README.md  RUNPOD-HOWTO.md  Run.bat  Update.bat  app.py  entrypoint.sh  install.bat  install.sh  patches.py  podman-compose.yml  pyproject.toml  run.sh  update.bat  vision_engine.py
.github/workflows/: build.yml  sourcery.yml
.streamlit/: config.toml
docs/: BUILD_WHEELS_HOWTO.md  RUNPOD-HOWTO.md
modules/: __init__.py  audio_engine.py  downloader.py  patches.py  vision_engine.py
